# Stock-Screener

./: .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  LICENSE  README.md  README_MINIMIZED.md  VS_CODE_SETUP.md  main.py  pyproject.toml  replit.md  requirements-template.txt  requirements.txt  run.py  setup.py  start.bat  start.sh  utils.py
.streamlit/: config.toml
docs/: API.md  INSTALLATION.md
